storage: Checking and fixing system config for NBDE

--- a/pkg/lib/page.scss
+++ b/pkg/lib/page.scss
@@ -170,6 +170,10 @@ html:not(.index-page) body {
   }
 }
 
+.ct-icon-check-circle {
+  color: var(--pf-global--success-color--100);
+}
+
 .ct-icon-info-circle {
   color: var(--pf-global--info-color--100);
 }
